feat: display user real names in intlink list
